Sugati/src/objects/Financial_Charges__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Days_Before_III__c</fullName>
        <label>Days Before III</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Before_II__c</fullName>
        <label>Days Before II</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Before_I__c</fullName>
        <label>Days Before I</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Required_III__c</fullName>
        <label>Deposit Required III</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deposit_Required_II__c</fullName>
        <label>Deposit Required II</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Deposit_I__c</fullName>
        <label>Required Deposit I</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Financial Charges</label>
</CustomObject>